--- a/NodeTreeAnalyzer.Entities/NodeTreeAnalyzer.Entities.csproj
+++ b/NodeTreeAnalyzer.Entities/NodeTreeAnalyzer.Entities.csproj
@@ -47,6 +47,9 @@
     <Compile Include="SingleChildNode.cs" />
     <Compile Include="TwoChildrenNode.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Node\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
