--- a/NodeTreeAnalyzer/App.config
+++ b/NodeTreeAnalyzer/App.config
@@ -3,4 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="IndentSize" value="4"/>
+  </appSettings>
+  <unity>
+    <assembly name="NodeTreeAnalyzer.Logic" />
+    <container>
+      <register type="NodeTreeAnalyzer.Logic.INodeDescriber,       NodeTreeAnalyzer.Logic" mapTo="NodeTreeAnalyzer.Logic.TextNodeDescriber,     NodeTreeAnalyzer.Logic"  />
+      
+    </container>
+  </unity>
 </configuration>
